[gd_scene load_steps=5 format=2]

[ext_resource path="res://globals/weapon.gd" type="Script" id=1]
[ext_resource path="res://globals/character_skeleton.tscn" type="PackedScene" id=2]
[ext_resource path="res://vanilla/weapons/whip/whip_rendering.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "forward_tilt"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Renderer/Point1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.233333, 0.3, 0.316667, 0.333333, 0.35, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -56, 8 ), Vector2( -32, -24 ), Vector2( 80, -48 ), Vector2( 144, -24 ), Vector2( 160, -8 ), Vector2( 168, 24 ), Vector2( 144, 48 ), Vector2( 80, 40 ), Vector2( 8, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Renderer/Point1In:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.233333, 0.3, 0.35, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -88, -8 ), Vector2( 0, -56 ), Vector2( 128, 0 ), Vector2( 112, 48 ), Vector2( 112, 48 ), Vector2( 112, -8 ), Vector2( 88, -24 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Skeleton" parent="." instance=ExtResource( 2 )]

[node name="Renderer" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Point0" type="Position2D" parent="Renderer"]

[node name="Point0Out" type="Position2D" parent="Renderer"]
position = Vector2( 24, -16 )

[node name="Point1In" type="Position2D" parent="Renderer"]
position = Vector2( 88, -24 )

[node name="Point1" type="Position2D" parent="Renderer"]
position = Vector2( 8, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/forward_tilt = SubResource( 2 )
